--- a/.github/workflows/native-image.yml
+++ b/.github/workflows/native-image.yml
@@ -1,47 +1,43 @@
-name: Build Native Image (Multi-platform)
+name: Build Native Image
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:  # 手动触发
+    branches: [main]
 
 jobs:
-  build-native:
+  build:
+    name: Build Native Image on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest]  # 你也可以加入 macos-latest, windows-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Set up GraalVM
         uses: graalvm/setup-graalvm@v1
         with:
           version: '21.0.2'
           java-version: '21'
-          components: 'native-image'
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          distribution: 'graalvm-community'
+          components: native-image
 
-      - name: Build Java class
+      - name: Compile Java Class
         run: |
           mkdir -p classes
-          javac -cp "jar/*" -d classes src/main/java/com/redxun/util/CompatibilityProcessRepairTool.java
+          javac -d classes -cp "lib/*" src/main/java/com/redxun/util/CompatibilityProcessRepairTool.java
 
-      - name: Build native image
+      - name: Build Native Image
         run: |
           native-image \
-            -cp "classes:jar/*" \
-            -H:Name=compatibility-tool \
-            -H:Class=com.redxun.util.CompatibilityProcessRepairTool \
-            --no-fallback \
-            --enable-all-security-services \
-            --report-unsupported-elements-at-runtime \
-            --allow-incomplete-classpath
+            -cp classes:lib/* \
+            com.redxun.util.CompatibilityProcessRepairTool \
+            compatibility-tool
 
       - name: Archive binary
         uses: actions/upload-artifact@v4
         with:
           name: compatibility-tool-${{ matrix.os }}
-          path: compatibility-tool*
+          path: compatibility-tool
