--- a/.github/workflows/native-image.yml
+++ b/.github/workflows/native-image.yml
@@ -22,14 +22,27 @@ jobs:
       - name: Build Native Image in CentOS 7 Docker
         run: |
           docker run --rm -v ${{ github.workspace }}/build-context:/app -w /app centos:7 bash -c "
-            yum install -y gcc glibc-devel zlib-devel wget unzip &&
+            # 替换 YUM 源为阿里云
+            sed -e 's|^mirrorlist=|#mirrorlist=|g' \
+                -e 's|^#baseurl=http://mirror.centos.org|baseurl=https://mirrors.aliyun.com|g' \
+                -i.bak \
+                /etc/yum.repos.d/CentOS-Base.repo &&
+            yum clean all &&
+            yum makecache &&
+            yum install -y gcc glibc-devel zlib-devel wget unzip curl tar &&
+
+            # 下载 GraalVM
             curl -L -O https://download.oracle.com/graalvm/21/latest/graalvm-community-jdk-21_linux-x64_bin.tar.gz &&
             tar -xzf graalvm-community-jdk-21_linux-x64_bin.tar.gz &&
+
             export GRAALVM_HOME=\$(pwd)/graalvm-community-* &&
             export PATH=\$GRAALVM_HOME/bin:\$PATH &&
+
             \$GRAALVM_HOME/bin/gu install native-image &&
+
             mkdir -p classes &&
             javac -d classes -cp \"jar/*\" src/main/java/com/redxun/util/CompatibilityProcessRepairTool.java &&
+
             native-image -cp classes:jar/* com.redxun.util.CompatibilityProcessRepairTool compatibility-tool
           "
 
