--- a/.github/workflows/native-image.yml
+++ b/.github/workflows/native-image.yml
@@ -34,7 +34,7 @@ jobs:
             # 下载 GraalVM
             curl -L -o graalvm.tar.gz https://github.com/graalvm/graalvm-ce-builds/releases/download/jdk-21.0.1/graalvm-community-jdk-21.0.1_linux-x64_bin.tar.gz &&
             tar -xzf graalvm.tar.gz &&
-            export GRAALVM_HOME=$(pwd)/$(ls -d graalvm-* | head -n 1)
+            export GRAALVM_HOME=$(pwd)/graalvm-community-openjdk-21.0.1+12.1
             export PATH=$GRAALVM_HOME/bin:$PATH &&
 
             \$GRAALVM_HOME/bin/gu install native-image &&
