--- a/.github/workflows/native-image.yml
+++ b/.github/workflows/native-image.yml
@@ -31,13 +31,14 @@ jobs:
             yum makecache &&
             yum install -y gcc glibc-devel zlib-devel wget unzip curl tar &&
 
-            # 下载 GraalVM
-            curl -L -o graalvm.tar.gz https://github.com/graalvm/graalvm-ce-builds/releases/download/jdk-21.0.1/graalvm-community-jdk-21.0.1_linux-x64_bin.tar.gz &&
+            curl -L -o graalvm.tar.gz https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-21.3.3/graalvm-ce-java21-linux-amd64-21.3.3.tar.gz &&
             tar -xzf graalvm.tar.gz &&
-            export GRAALVM_HOME=$(pwd)/graalvm-community-openjdk-21.0.1+12.1
-            export PATH=$GRAALVM_HOME/bin:$PATH &&
-
-            \$GRAALVM_HOME/bin/gu install native-image &&
+            export GRAALVM_HOME=$(pwd)/graalvm-ce-java21-21.3.3 &&
+            export PATH=\$GRAALVM_HOME/bin:\$PATH &&
+          
+            # 验证 Java 与 native-image
+            java -version &&
+            native-image --version &&
 
             mkdir -p classes &&
             javac -d classes -cp \"jar/*\" src/main/java/com/redxun/util/CompatibilityProcessRepairTool.java &&
