--- a/.github/workflows/native-image.yml
+++ b/.github/workflows/native-image.yml
@@ -34,9 +34,10 @@ jobs:
               javac -d /app/classes -cp '/app/jar/*' /app/src/main/java/com/redxun/util/CompatibilityProcessRepairTool.java && \
               native-image \
                 -cp /app/classes:/app/jar/* \
-                -o /app/output/compatibility-tool
-                com.redxun.util.CompatibilityProcessRepairTool
-          "
+                -H:Path=/app/output \
+                com.redxun.util.CompatibilityProcessRepairTool \
+                compatibility-tool
+            "
 
       - name: Verify on CentOS 7
         run: |
