--- a/.github/workflows/native-image.yml
+++ b/.github/workflows/native-image.yml
@@ -33,11 +33,12 @@ jobs:
               ls -l && \
               chmod 777 /app/output && \
               javac -d /app/classes -cp '/app/jar/*' /app/src/main/java/com/redxun/util/CompatibilityProcessRepairTool.java && \
-              native-image \
-                -cp /app/classes:/app/jar/* \
-                -H:Path=/app/output \
-                com.redxun.util.CompatibilityProcessRepairTool \
-                compatibility-tool
+              ls -l /app/output && \
+              # native-image \
+              #   -cp /app/classes:/app/jar/* \
+              #   -H:Path=/app/output \
+              #   com.redxun.util.CompatibilityProcessRepairTool \
+              #   compatibility-tool
             "
 
       - name: Verify on CentOS 7
