--- a/.github/workflows/native-image.yml
+++ b/.github/workflows/native-image.yml
@@ -29,11 +29,7 @@ jobs:
             -u root \
             ghcr.io/graalvm/native-image-community:21 \
             bash -c "
-              mkdir -p /app/output && \
-              ls -l && \
-              chmod 777 /app/output && \
-              javac -d /app/classes -cp '/app/jar/*' /app/src/main/java/com/redxun/util/CompatibilityProcessRepairTool.java && \
-              ls -l /app/output
+              mkdir -p /app/output
               
             "
 
