--- a/.github/workflows/native-image.yml
+++ b/.github/workflows/native-image.yml
@@ -27,10 +27,16 @@ jobs:
             -v ${{ github.workspace }}/build-context:/app \
             -w /app \
             -u root \
-            ghcr.io/graalvm/native-image-community:21 \
+            ghcr.io/graalvm/native-image:ol8-java21 \
             bash -c "
-              cd /app/backend && \
-              pwd
+              ls -l /app && \  
+              mkdir -p /app/{classes,output} && \
+              chmod -R 777 /app && \
+              javac -d /app/classes -cp '/app/jar/*' /app/src/main/java/com/redxun/util/CompatibilityProcessRepairTool.java && \
+              native-image \
+                -cp /app/classes:/app/jar/* \
+                -o /app/output/compatibility-tool \
+                com.redxun.util.CompatibilityProcessRepairTool
             "
 
       - name: Verify on CentOS 7
