--- a/.github/workflows/native-image.yml
+++ b/.github/workflows/native-image.yml
@@ -24,17 +24,14 @@ jobs:
       - name: Compile and build native image
         run: |
           docker run --rm \
-            -v ${{ github.workspace }}/build-context/src:/app/src \
-            -v ${{ github.workspace }}/build-context/jar:/app/jar \
-            -v ${{ github.workspace }}/build-context/output:/app/output \
+            -v ${{ github.workspace }}/build-context:/app \
             -w /app \
             ghcr.io/graalvm/native-image-community:21 \
             bash -c "
-              mkdir -p /app/classes /app/output &&
+              mkdir -p /app/classes &&
               javac -d /app/classes -cp '/app/jar/*' /app/src/main/java/com/redxun/util/CompatibilityProcessRepairTool.java &&
-              native-image \
+              /opt/graalvm/bin/native-image \
                 -cp /app/classes:/app/jar/* \
-                -H:Path=/app/output \
                 com.redxun.util.CompatibilityProcessRepairTool \
                 compatibility-tool
             "
