--- a/.github/workflows/native-image.yml
+++ b/.github/workflows/native-image.yml
@@ -34,7 +34,7 @@ jobs:
               javac -d /app/classes -cp '/app/jar/*' /app/src/main/java/com/redxun/util/CompatibilityProcessRepairTool.java &&
               native-image \
                 -cp /classes:/jar/* \
-                -H:Path=/output \
+                -o /output \
                 com.redxun.util.CompatibilityProcessRepairTool \
                 compatibility-tool
             "
